<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cmpe277.project.zeusrealty.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.cmpe277.project.zeusrealty.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_ar"
            app:destination="@id/navigation_ar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cmpe277.project.zeusrealty.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_nfc"
        android:name="com.cmpe277.project.zeusrealty.ui.nfc.NfcFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_nfc" />
    <fragment
        android:id="@+id/navigation_ar"
        android:name="com.cmpe277.project.zeusrealty.ArFragment"
        android:label="@string/title_ar"
        tools:layout="@layout/fragment_ar" />
</navigation>