<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.home.PropertyDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- TITLE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/txt_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="title"
                android:textColor="@color/colorMainProductTitle"
                android:textSize="@dimen/produit_detail_txtTitleMain"
                android:textStyle="normal|bold" />

            <Button
                android:id="@+id/button_detail_heart"
                android:layout_width="@dimen/produit_detail_btn_favorite"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_contact_mail" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/produit_detail_blackLineView_height"
            android:layout_marginTop="@dimen/produit_detail_marginTop_big_space"
            android:background="@color/colorBlackBackground" />

        <!-- RECYCLER VIEW -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/produit_detail_marginTop_big_space"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iconImg1"
                android:layout_width="@dimen/produit_detail_imageview_width"
                android:layout_height="@dimen/produit_detail_imageview_height"
                android:layout_gravity="center"
                android:background="@color/colorBlackBackground" />

            <!--            <android.support.v7.widget.RecyclerView-->
            <!--                android:id="@+id/content_product_detail_recycer_view"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="@dimen/produit_detail_recyclerview_height"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_margin="@dimen/produit_detail_recyclerview_margin"-->
            <!--                android:background="@android:color/darker_gray">-->

            <!--            </android.support.v7.widget.RecyclerView>-->

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/produit_detail_blackLineView_height"
            android:layout_marginTop="@dimen/produit_detail_marginTop_big_space"
            android:background="@color/colorBlackBackground" />

        <!-- TITLE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/produit_detail_marginTop_big_space"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="price"
                android:textColor="@color/colorBlackTxt"
                android:textSize="@dimen/produit_detail_txtSizePriceArea"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_detail_total_area_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="area"
                android:textColor="@color/colorBlackTxt"
                android:textSize="@dimen/produit_detail_txtSizePriceArea"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- IMAGES SCROLLABLE -->


        <!-- DESCRIPTION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/produit_detail_marginTop_big_space"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="description"
                android:textColor="@color/colorBlackTxt"
                android:textStyle="italic" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/produit_detail_blackLineView_height"
            android:layout_marginTop="@dimen/produit_detail_marginTop_big_space"
            android:background="@color/colorBlackBackground" />


        <!-- TYPE -->
        <LinearLayout
            android:id="@+id/content_produit_detail_linear_layout_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/produit_detail_marginTop_detailFields"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/content_produit_detail_type"
                android:textColor="@color/colorField"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="null"
                android:textColor="@color/colorBlackText" />
        </LinearLayout>

        <!-- NUMBER OF ROOMS -->
        <LinearLayout
            android:id="@+id/content_produit_detail_linear_layout_nb_rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/produit_detail_marginTop_detailFields"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/content_produit_detail_nb_rooms"
                android:textColor="@color/colorField"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_detail_nb_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="null"
                android:textColor="@color/colorBlackText" />
        </LinearLayout>

        <!-- TOTAL AREA -->
        <LinearLayout
            android:id="@+id/content_produit_detail_linear_layout_total_area_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/produit_detail_marginTop_detailFields"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView103"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/content_produit_detail_total_area"
                android:textColor="@color/colorField"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_detail_total_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="null"
                android:textColor="@color/colorBlackText" />
        </LinearLayout>

        <!-- LIVING AREA -->
        <LinearLayout
            android:id="@+id/content_produit_detail_linear_layout_area_living"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/produit_detail_marginTop_detailFields"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView104"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/content_produit_detail_living_area"
                android:textColor="@color/colorField"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_detail_living_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="null"
                android:textColor="@color/colorBlackText" />
        </LinearLayout>

        <!-- ADDRESS -->
        <LinearLayout
            android:id="@+id/addressId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/produit_detail_marginTop_detailFields"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView189"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="Address:"
                android:textColor="@color/colorField"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="null"
                android:textColor="@color/colorBlackText" />
        </LinearLayout>

        <!-- COUNTRY -->
        <LinearLayout
            android:id="@+id/content_produit_detail_linear_layout_building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/produit_detail_marginTop_detailFields"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView106"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="Country:"
                android:textColor="@color/colorField"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="null"
                android:textColor="@color/colorBlackText" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ui.home.HomeFragment">-->

<!--    <TextView-->
<!--        android:id="@+id/text_home"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="108dp"-->
<!--        android:layout_marginTop="80dp"-->
<!--        android:text="@string/logout"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/text_home" />-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->